Remove assertion of request normalized rect

normalizedRect is null if the requested page is not visible

BUG: 311238